plugins/mermaid/testData/intention/gitgraph/merge_no_commits.mermaid
gitGraph
  <error descr="Branch 'testBranch' has no commits">merge testBranch</error>
  commit
  checkout <error descr="Branch 'testBranch' does not exist">testBranch</error>
  commit
  branch testBranch
  commit
  checkout main
  merge testBranch